[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Turret/Turret.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/turret.png" type="Texture" id=2]
[ext_resource path="res://entities/Turret/TurretArm.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0447, 28.4152 )

[sub_resource type="CircleShape2D" id=2]
radius = 256.125

[node name="Turret" type="StaticBody2D"]
script = ExtResource( 1 )
arm_scene = ExtResource( 3 )
cadenceTimer = 0.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Cadence" type="Timer" parent="."]

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )
[connection signal="timeout" from="Cadence" to="." method="_on_Cadence_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
